@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2021, Oracle and/or its affiliates.
+ * Copyright (c) 2015, 2023, Oracle and/or its affiliates.
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License, version 2.0, as published by the
@@ -87,12 +87,7 @@ public interface ServerSession {
      */
     void setStatusFlags(int statusFlags, boolean saveOldStatusFlags);
 
-    int getOldStatusFlags();
-
-    void setOldStatusFlags(int statusFlags);
-
     /**
-     * 
      * @return TRANSACTION_NOT_STARTED, TRANSACTION_IN_PROGRESS, TRANSACTION_STARTED or TRANSACTION_COMPLETED
      */
     int getTransactionState();
